--- a/scss/components/footer/_footer.scss
+++ b/scss/components/footer/_footer.scss
@@ -2,4 +2,23 @@
 @use "../../partials" as *;
 
 .footer {
+  background: $white;
+  height: size(48);
+  @include flex-center;
+  text-align: center;
+  position: relative;
+  left: 0;
+  margin-bottom: size(80);
+  @include w100;
+
+  @include breakpoint(tab992) {
+    left: size(270);
+    width: calc(100% - size(270));
+    margin-bottom: size(0);
+  }
+
+  .text-copyright {
+    color: $footerText;
+    @include font($primaryFont, 12, medium, normal, 21);
+  }
 }
