--- a/scss/global/_colors.scss
+++ b/scss/global/_colors.scss
@@ -17,6 +17,8 @@ $textPrimary: hsl(210, 21%, 33%); //#425466
 $textPlaceholder: hsl(240, 6%, 73%); //B5B5BD
 $usercolor: hsl(240, 1%, 30%); //#4B4B4C
 
+$headerbg: hsl(0, 0%, 98%); //#FAFAFA
+
 $gray-50: hsl(206, 21%, 94%); //#EBEFF2
 $gray-100: hsl(204, 45%, 98%); //#F7FAFC
 $gray-200: hsl(210, 38%, 95%); //#EDF2F7
