--- a/scss/components/main/_main.scss
+++ b/scss/components/main/_main.scss
@@ -15,6 +15,7 @@
     position: fixed;
     top: size(64);
     left: 0;
+    z-index: 100;
 
     @include breakpoint(tab992) {
       @include flex-column;
@@ -240,10 +241,12 @@
   .main-section {
     position: relative;
     @include wh100;
+    padding: size(30) size(16) size(48);
 
     @include breakpoint(tab992) {
       width: calc(100% - size(32));
       left: size(270);
+      padding: size(32) size(32) size(80);
     }
   }
 }
