--- a/scss/global/_colors.scss
+++ b/scss/global/_colors.scss
@@ -30,6 +30,8 @@ $gray-700: hsl(218, 17%, 35%); //#4A5568
 $gray-800: hsl(218, 23%, 23%); //#2D3748
 $gray-900: hsl(220, 26%, 14%); //#1A202C
 
+$activebg: hsl(220, 23%, 97%); // #F7F8FA
+
 $checkbg: rgba(5, 16, 51, 0.0001);
 
 $footerText: hsl(0, 0%, 72%); //#B7B7B7
