--- a/scss/pages/_profile.scss
+++ b/scss/pages/_profile.scss
@@ -1,7 +1,7 @@
 @use "../global" as *;
 @use "../partials" as *;
 
-.profile {
+.myprofile {
   @include flex-column;
   gap: size(32);
 
@@ -16,23 +16,235 @@
     @include flex-column;
     background: $white;
 
-    .profilemenu {
+    @include breakpoint(tab992) {
+      flex-direction: row;
+    }
+
+    .myprofilemenu {
       background: $white;
 
-      .profilelist {
+      @include breakpoint(tab992) {
+        width: size(238);
+        min-height: size(615);
+      }
+
+      .myprofilelist {
         @include list-horizontal;
         gap: size(8);
 
+        @include breakpoint(tab992) {
+          flex-direction: column;
+          @include border-single(right, solid, 1, $gray-300);
+          @include h100;
+          min-height: size(615);
+          padding-top: size(36);
+        }
+
         &-item {
-          // width: 50%;
+          width: calc((100% - size(8) / 2));
+
+          @include breakpoint(tab992) {
+            @include w100;
+          }
         }
 
         &-link {
           @include flex-center;
           padding: size(14);
+          color: $gray-700;
+          @include font($primaryFont, 13, medium, normal, 18.2);
+
+          @include breakpoint(tab992) {
+            font-size: size(14);
+          }
+
+          &:hover:not(.active) {
+            background: $gray-200;
+
+            @include breakpoint(tab992) {
+              background: $activebg;
+            }
+          }
 
           &.active {
-            background: $activebg;
+            background: $gray-200;
+
+            @include breakpoint(tab992) {
+              background: $activebg;
+            }
+          }
+
+          @include breakpoint(tab992) {
+            justify-content: flex-start;
+            padding-left: size(32);
+          }
+        }
+      }
+    }
+
+    .profilecontent {
+      padding: size(32) size(20);
+      @include flex-column;
+      gap: size(40);
+
+      @include breakpoint(tab992) {
+        width: calc(100% - size(238));
+        padding: size(40);
+      }
+
+      &-header {
+        @include flex-center-column;
+        gap: size(24);
+        text-align: center;
+
+        .profilepic {
+          position: relative;
+          @include square(140);
+          @include circle;
+          @include flex-center;
+
+          img {
+            @include wh100;
+            object-fit: cover;
+            position: relative;
+          }
+
+          .upload {
+            @include square(48);
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            z-index: 100;
+
+            .uploadprofile {
+              @include wh100;
+              @include flex-center;
+              overflow: hidden;
+
+              svg {
+                @include wh100;
+
+                circle {
+                  cursor: pointer;
+                }
+              }
+            }
+          }
+        }
+
+        .username {
+          color: $gray-700;
+          @include font($primaryFont, 20, bold, normal, 24);
+        }
+      }
+
+      &-body {
+        @include flex-center;
+
+        .profileform {
+          @include flex-column;
+          gap: size(16);
+          @include w100;
+
+          @include breakpoint(mobile768) {
+            width: size(445);
+          }
+
+          .inputbox {
+            @include flex-column;
+            gap: size(8);
+
+            .inputlabel {
+              color: $textPrimary;
+              @include font($primaryFont, 14, medium, normal, 17);
+            }
+
+            .inputfield {
+              @include setBgColor($white, $gray-900);
+              @include border(solid, 1, $gray-300);
+              @include radius(6);
+              @include font($primaryFont, 14, medium, normal, 17);
+              padding: size(13.5) size(16);
+              @include transitionsall;
+
+              &::placeholder {
+                color: $textPlaceholder;
+              }
+
+              &:focus {
+                border-color: $primary;
+              }
+            }
+          }
+
+          .submitbox {
+            @include flex-end;
+            margin-top: size(16);
+
+            .savebox {
+              width: size(140);
+
+              .btn-submit {
+                font-size: size(14);
+                font-weight: 600;
+              }
+            }
+          }
+        }
+      }
+
+      .changepassword {
+        @include wh100;
+        @include flex-center;
+
+        .changeform {
+          @include flex-column;
+          gap: size(16);
+          @include w100;
+
+          @include breakpoint(mobile768) {
+            width: size(445);
+          }
+
+          .inputbox {
+            @include flex-column;
+            gap: size(8);
+
+            .inputlabel {
+              color: $textPrimary;
+              @include font($primaryFont, 14, medium, normal, 17);
+            }
+
+            .inputfield {
+              @include setBgColor($white, $gray-900);
+              @include border(solid, 1, $gray-300);
+              @include radius(6);
+              @include font($primaryFont, 14, medium, normal, 17);
+              padding: size(13.5) size(16);
+              @include transitionsall;
+
+              &::placeholder {
+                color: $textPlaceholder;
+              }
+
+              &:focus {
+                border-color: $primary;
+              }
+            }
+          }
+
+          .submitbox {
+            @include flex-end;
+            margin-top: size(16);
+
+            .savebox {
+              width: size(140);
+
+              .btn-submit {
+                font-size: size(14);
+                font-weight: 600;
+              }
+            }
           }
         }
       }
