--- a/scss/pages/_profile.scss
+++ b/scss/pages/_profile.scss
@@ -104,6 +104,7 @@
           @include flex-center;
 
           img {
+            @include circle;
             @include wh100;
             object-fit: cover;
             position: relative;
@@ -192,6 +193,154 @@
           }
         }
       }
+      .settingsform {
+        @include w100;
+        @include flex-column;
+        gap: size(16);
+        @include breakpoint(mobile768) {
+          width: size(444);
+        } 
+
+        @include breakpoint(tab992) {
+          @include w100;
+        }
+
+        @include breakpoint(desktop1100) {
+          width: size(444);
+        } 
+
+        &-header {
+
+          .cover-thumb {
+            @include w100;
+            height: size(214);
+            position: relative;
+
+            &:after {
+              content:'\A';
+              position:absolute;
+              @include wh100;
+              top:0; left:0;
+              background:rgba(0,0,0,0.5);
+              opacity:1;
+              @include radius(4);
+              
+          }
+            img {
+              @include wh100;
+              object-fit: cover;
+              @include radius(4);
+
+            }
+            .upload-cover {
+              position: absolute;
+              bottom: size(12);
+              right: size(12);
+              z-index: 1;
+
+              .uploadcover {
+                @include border(solid,1,$white);
+                @include setBgColor(transparent,$white);
+                padding: size(4) size(10);
+                @include font($primaryFont, 12, medium, normal, 24);
+                @include flex-center;
+                gap: size(10);
+                @include transitionsall;
+                cursor: pointer;
+                @include breakpoint(mobile576) {
+                  padding: size(6) size(14);
+                }
+                @include hover {
+                  @include setBgColor($primary,$white);
+                  border-color: $primary;
+                }
+              }
+            }
+
+          }
+          .profile-thumb {
+            margin-top:size(-60);
+            z-index: 2;
+            position: relative;
+            @include square(120);
+            margin-left: size(26);
+            img {
+              @include wh100;
+              @include circle;
+              object-fit: cover;
+            }
+  
+            .upload-profile {
+              position: absolute;
+              bottom: size(0);
+              right: size(0);
+              label {
+                cursor: pointer;
+                @include circle;
+              }
+            }
+          }
+        }
+
+        
+      
+
+        &-body{
+          @include flex-column;
+          gap: size(16);
+          .inputbox {
+            @include flex-column;
+            gap: size(8);
+
+            .inputlabel {
+              color: $gray-600;
+              @include font($primaryFont, 14, medium, normal, 17);
+            }
+
+            .inputfield , .textareafield {
+              @include setBgColor($white, $gray-900);
+              @include border(solid, 1, $gray-300);
+              @include radius(6);
+              @include font($primaryFont, 14, medium, normal, 17);
+              padding: size(13.5) size(16);
+              @include transitionsall;
+              filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.07));
+
+              &::placeholder {
+                color: $textPlaceholder;
+              }
+
+              &:focus {
+                border-color: $primary;
+              }
+            }
+            .textareafield {
+              height: size(218);
+            }
+          }
+
+          .keywordbox {
+            @include flex-column;
+            gap: size(10);
+            .keyword-title {
+              color: $gray-600;
+              @include font($primaryFont, 14, medium, normal, 17);
+            }
+
+            .keywords {
+              @include flex;
+              gap: size(8);
+              flex-wrap: wrap;
+            }
+
+
+          } 
+
+         
+
+        }
+      }
+
 
       .changepassword {
         @include wh100;
