--- a/scss/pages/_profile.scss
+++ b/scss/pages/_profile.scss
@@ -287,7 +287,8 @@
 
         &-body{
           @include flex-column;
-          gap: size(16);
+          gap: size(16); 
+          
           .inputbox {
             @include flex-column;
             gap: size(8);
@@ -300,7 +301,7 @@
             .inputfield , .textareafield {
               @include setBgColor($white, $gray-900);
               @include border(solid, 1, $gray-300);
-              @include radius(6);
+              
               @include font($primaryFont, 14, medium, normal, 17);
               padding: size(13.5) size(16);
               @include transitionsall;
@@ -322,6 +323,16 @@
           .keywordbox {
             @include flex-column;
             gap: size(10);
+            .border-shadow {
+              @include border(solid,1,$gray-400);
+              filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.07));
+            }
+            .keywords {
+             
+              padding: size(16) ;
+              padding-bottom: size(36);
+              
+            }
             .keyword-title {
               color: $gray-600;
               @include font($primaryFont, 14, medium, normal, 17);
@@ -335,6 +346,24 @@
 
 
           } 
+
+          .btn-wrapper {
+            width: size(180);
+            margin-left: auto;
+            padding-top: size(22);
+            .btn-submit {
+              padding-inline: 0;
+              font-size: size(14);
+            }
+            
+            &.delete-wrapper {
+              padding-top: size(10);
+              .btn-submit {
+                padding-inline: 0;
+                font-size: size(14);
+              }
+            }
+          }
 
          
 
