--- a/scss/components/input/_input.scss
+++ b/scss/components/input/_input.scss
@@ -5,7 +5,7 @@
     gap: size(8);
 
     .inputlabel {
-      color: $textPrimary;
+      color: $gray-600;
       @include font($primaryFont, 14, medium, normal, 17);
     }
 
@@ -26,7 +26,7 @@
       }
     }
     .textareafield {
-        height: size(400);
+       
     }
   }
 
