--- a/scss/custom/_checkbox.scss
+++ b/scss/custom/_checkbox.scss
@@ -5,8 +5,8 @@
   &-box {
     &:checked ~ .customcheck-label {
       &::before {
-        // background: $primaryText;
-        // border-color: $primaryText;
+        background:$checkboxbg;
+        border-color:transparent;
       }
 
       &::after {
@@ -18,11 +18,12 @@
 
   &-label {
     position: relative;
-    // color: $primaryText;
+    color: $gray-700;
     font: inherit;
     font-weight: 300;
     padding-left: size(26);
     cursor: pointer;
+    @include font($primaryFont,14,normal,normal,14);
 
     .link {
       color: inherit;
@@ -32,7 +33,7 @@
 
       @include hover {
         text-decoration: none;
-        // color: darken($primary, 20%);
+        color: darken(green, 20%);
       }
     }
 
@@ -45,7 +46,7 @@
     &::before {
       @include square(18);
       @include radius(4);
-      // @include border(solid, 1, $linkborder);
+      @include border(solid, 2, $checkborder);
       @include translateY(-50%);
       @include transitionsall;
     }
@@ -53,7 +54,7 @@
     &::after {
       width: size(5);
       height: size(10);
-      @include border(solid, 1.5, $white);
+      @include border(solid, 2, $white);
       border-top: 0;
       border-left: 0;
       left: size(7);
@@ -64,7 +65,9 @@
     }
 
     &::selection {
-      // @include setBgColor(transparent, $primaryText);
+      @include setBgColor($primary, $white);
     }
   }
 }
+
+
