--- a/scss/pages/_videodetail.scss
+++ b/scss/pages/_videodetail.scss
@@ -113,6 +113,7 @@
                  @include font($primaryFont,10,medium,normal,14);
                  gap: size(4);
                  color: $gray-600;
+                 cursor: pointer;
                 }
             }
             .thumbnail-image {
