--- a/scss/components/button/_button.scss
+++ b/scss/components/button/_button.scss
@@ -130,3 +130,12 @@ button,
     
   }
 }
+.delete-btn,
+.download-btn {
+  padding: size(7) size(14);
+  @include radius(4);
+  @include border(solid,1,$gray-300);
+  @include font($primaryFont, 12, normal, normal, 18);
+  color: $gray-600;
+  box-shadow: 0px 4.95074px 6.60099px rgba(32, 29, 67, 0.07);
+}
