--- a/scss/custom/_select.scss
+++ b/scss/custom/_select.scss
@@ -1,112 +1,236 @@
 @use "../global" as *;
 @use "../partials" as *;
 
-@use '../global' as *;
-@use '../partials' as p;
 
-.customselect {
-	@include p.w100;
- 
-background-color: red;
-	.selector {
+
+.select-wrapper {
+	position: relative;
+	user-select: none;
+	@include w100;
+  
+	.select {
+	  position: relative;
+  
+	  &-trigger {
 		position: relative;
+		@include flex-center;
 		cursor: pointer;
-		z-index: 1;
-
-		.selected {
-			background: $white;
-			@include p.border(solid, 1, $checkborder);
-			@include p.radius(8);
-			@include p.flex-center-between;
-			// gap: p.size(8);
-			padding: p.size(8) p.size(12);
-			min-width: p.size(104);
-	
-			.label {
-				width: calc(100% - p.size(16));
-				color: $textPrimary;
-				@include font($primaryFont, 14, medium, normal, 20);
-				letter-spacing: p.size(0.04);
-
-				&::selection {
-					color: inherit;
-					background: transparent;
-				}
-	
-				span {
-					color: inherit;
-					font: inherit;
-
-					&::selection {
-						color: inherit;
-						background: transparent;
-					}
-				}
-			}
-	
-			.arrow {
-				transform: rotateZ(0deg);
-				transition-duration: 0.3s;
-				transition-timing-function: cubic-bezier(.59,1.39,.37,1.01);
-				width: p.size(16);
-				@include p.flex-center;
-	
-				.icon {
-					width: p.size(11);
-					height: p.size(6);
-					@include p.flex-center;
-					overflow: hidden;
-					margin-top: p.size(-3);
-	
-					svg {
-						@include p.wh100;
-					}
-				}
-	
-				&.expanded {
-					transform: rotateZ(180deg);
-
-					.icon {
-						margin-top: p.size(3);
-					}
-				}
-			}
+		height: size(40);
+		overflow: hidden;
+		width: size(110);
+		@include border(solid,1,$gray-400);
+  
+		.selectedvalue {
+		  color: $gray-600;
+		  @include font($primaryFont, 14, normal, normal, 20);
+		  // opacity: 0;
 		}
-	}
-
-	ul {
-		width: 100%;
-		list-style-type: none;
-		padding: 0;
-		margin: 0;
+  
+		.arrow {
+		  @include square(30);
+		  @include flex-center;
+		  overflow: hidden;
+		  margin-left: size(10);
+		 
+  
+		  svg {
+			@include transitiontransform;
+		  }
+		}
+	  }
+  
+	  .custom-options {
 		position: absolute;
-		z-index: 1;
-		@include p.setBgColor($white, $textPrimary);
-		@include p.border(solid, 1, $checkborder);
-		@include p.radius(8);
-		letter-spacing: p.size(0.04);
-
-		li {
-			color: inherit;
-			@include font($primaryFont, 14, normal, normal, 20);
-			cursor: pointer;
-			padding: p.size(8) p.size(12);
-			
-			@include p.hover {
-				@include p.setBgColor($primary, $white);
-			}
-		}
-	}
-
-	.current {
-		background: darken($bodybg, 3%);
-	}
-
-	.hidden {
+		display: block;
+		top: 100%;
+		left: 0;
+		right: 0;
+		box-shadow: rgba(149, 157, 165, 0.2) size(0) size(8) size(24);
+		
+		
+		@include double-radius(bottom, left, 4, bottom, right, 4);
+		// @include radius(6);
+		background: $white;
+		@include transitionsall;
+		opacity: 0;
 		visibility: hidden;
-	}
+		pointer-events: none;
+		z-index: 2;
+		overflow-y: scroll;
+		max-height: size(240);
+  
+		&::-webkit-scrollbar {
+		  background: transparent;
+		//   width: size(4);
+		width: 0;
+		}
+	
+		&::-webkit-scrollbar-thumb {
+		  background: $gray-200;
+		//   @include radius(4);
+		}
+  
+		.custom-option {
+		  position: relative;
+		  display: block;
+		  cursor: pointer;
+		  padding: size(8);
+		  @include transitionsall;
+		  color: $gray-600;
+		  @include font($primaryFont, 14, normal, normal, 20);
 
-	.visible {
-		visibility: visible;
+  
+		  &:hover {
+			cursor: pointer;
+			@include setBgColor($gray-200, $gray-600);
+		  }
+  
+		  &.selected {
+			// @include setBgColor($primary, $white);
+  
+		  }
+		}
+	  }
+  
+	  &.open {
+		.select-trigger {
+		  .arrow {
+			svg {
+			  @include rotate(180);
+			}
+		  }
+		}
+  
+		.custom-options {
+		  opacity: 1;
+		  visibility: visible;
+		  pointer-events: all;
+		}
+	  }
 	}
+  }
+  
+
+.date-select{
+	.select-wrapper {
+		position: relative;
+		user-select: none;
+		@include w100;
+	  
+		.select {
+		  position: relative;
+	  
+		  &-trigger {
+			position: relative;
+			@include flex-between;
+			cursor: pointer;
+			height: size(80);
+			overflow: hidden;
+			width: size(200);
+			border: none;
+			padding: 0 size(10);
+
+			.date-wrapper {
+				@include flex-column;
+				gap: size(4);
+
+
+				.date {
+					@include font($primaryFont, 14, medium, normal, 20);
+					color: $gray-600;
+				}
+
+				.selectedvalue {
+					color: $gray-600;
+					@include font($primaryFont, 16, bold, normal, 20);
+				}
+			}
+	  
+			.selectedvalue {
+			  color: $gray-600;
+			  @include font($primaryFont, 14, normal, normal, 20);
+			  // opacity: 0;
+			}
+	  
+			.arrow {
+			  @include square(20);
+			  @include flex-center;
+			  overflow: hidden;
+			  margin-left: size(10);
+			 
+	  
+			  svg {
+				@include transitiontransform;
+			  }
+			}
+		  }
+	  
+		  .custom-options {
+			position: absolute;
+			display: block;
+			top: 100%;
+			left: 0;
+			right: 0;
+			box-shadow: rgba(149, 157, 165, 0.2) size(0) size(8) size(24);
+			@include double-radius(bottom, left, 4, bottom, right, 4);
+			// @include radius(6);
+			background: $white;
+			@include transitionsall;
+			opacity: 0;
+			visibility: hidden;
+			pointer-events: none;
+			z-index: 2;
+			overflow-y: scroll;
+			max-height: size(240);
+	  
+			&::-webkit-scrollbar {
+			  background: transparent;
+			//   width: size(4);
+			width: 0;
+			}
+		
+			&::-webkit-scrollbar-thumb {
+			  background: $gray-200;
+			//   @include radius(4);
+			}
+	  
+			.custom-option {
+			  position: relative;
+			  display: block;
+			  cursor: pointer;
+			  padding: size(8);
+			  @include transitionsall;
+			  color: $gray-600;
+			  @include font($primaryFont, 14, normal, normal, 20);
+	
+	  
+			  &:hover {
+				cursor: pointer;
+				@include setBgColor($gray-200, $gray-600);
+			  }
+	  
+			  &.selected {
+				// @include setBgColor($primary, $white);
+	  
+			  }
+			}
+		  }
+	  
+		  &.open {
+			.select-trigger {
+			  .arrow {
+				svg {
+				  @include rotate(180);
+				}
+			  }
+			}
+	  
+			.custom-options {
+			  opacity: 1;
+			  visibility: visible;
+			  pointer-events: all;
+			}
+		  }
+		}
+	  }
 }
