--- a/scss/pages/_videodetail.scss
+++ b/scss/pages/_videodetail.scss
@@ -66,7 +66,11 @@
         @include flex-column;
         gap: size(40);
         &-header {
-            @include flex-center-between;
+         @include flex-center-column;
+            @include breakpoint(mobile414) {
+                @include flex-center-between;
+                flex-direction: row;
+            }
             
             .title {
                 color: $gray-800;
